--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,7 +1,6 @@
 <section>
-    <div style="margin-top:15px; ">
-        <img style="" class="left" src='{{ root_url }}/assets/satra.jpg'/>
-        <p><a href="http://satra.cogitatum.org">Satrajit Ghosh</a><br/>
-            Scientist</p>
-    </div>
+   <div style="text-align: center;">
+   <img  class="img-polaroid" src="{{ root_url }}/assets/satra.jpg"><br>
+   <a class="lead" href="https://www.dropbox.com/s/3np5k1p5g1i2iu7/CV_Latest.pdf">Download CV</a>
+   </div>
 </section>
