--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,13 +1,14 @@
         <ul class="nav">
           <li><a href="{{ root_url }}/">Home</a></li>
-            <li class="dropdown">
-                <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                    <li><a tabindex="-1" href="{{ root_url }}/research">Summary</a></li>
-                    <li><a tabindex="-1" href="{{ root_url }}/research/current-projects">Projects</a></li>
-                    <li><a tabindex="-1" href="{{ root_url }}/research/publications">Publications</a></li>
-                </ul>
-            </li>
+          <li class="dropdown">
+            <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                <li><a tabindex="-1" href="{{ root_url }}/research">Summary</a></li>
+                <li><a tabindex="-1" href="{{ root_url }}/research/current-projects">Projects</a></li>
+                <li><a tabindex="-1" href="{{ root_url }}/research/publications">Publications</a></li>
+            </ul>
+          </li>
+          <li><a href="{{ root_url }}/software">Software</a></li>
           <li><a href="{{ root_url }}/teaching">Teaching</a></li>
           <li><a href="{{ root_url }}/blog/archives">Blog</a></li>
           <li><a href="{{ root_url }}/about">About me</a></li>
