--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -18,10 +18,10 @@
 
   {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
-  <link href="{{ root_url }}/favicon.ico" rel="icon">
-  
-  <link href="{{ root_url }}/assets/bootstrap/css/spacelab.min.css" rel="stylesheet" type="text/css">
-  <link href="{{ root_url }}/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+  <link href="{{ root_url }}/favicon.png" rel="icon">
+
+    <link href="{{ root_url }}/assets/bootstrap/css/spacelab.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ root_url }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="{{ root_url }}/assets/bootstrap/css/custom.css" rel="stylesheet" type="text/css">
   <link href="{{ root_url }}/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
   
