--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -9,19 +9,12 @@
       <div class="nav-collapse">
         {% include custom/navigation.html %}
         {% if site.simple_search %}
-          <form action="{{ site.simple_search }}" method="get" class="navbar-search pull-left">
+          <form action="{{ site.simple_search }}" method="get" class="navbar-search pull-right">
             <fieldset role="search">
               <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}" />
               <input type="text" name="q" results="0" placeholder="Search" class="search-query span2" />
             </fieldset>
           </form>
-        {% endif %}
-        {% if site.feedburner_url %}
-        <ul class="nav pull-right">
-          <li>
-            <a style="padding: 7px 0 0 0;" href="{{ site.feedburner_url }}"><img src="{{ site.feedburner_img_url }}&amp;fg=444444&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a>            
-          </li>
-        </ul>
         {% endif %}
       </div><!-- /.nav-collapse -->
     </div>
