fix: carousel to move on load

--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -5,3 +5,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="{{ root_url }}/assets/bootstrap/js/bootstrap.min.js"></script>
 {% include twitter_sharing.html %}
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('.carousel').carousel({
+            interval: 4000
+        })
+    });
+</script>
