--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -24,7 +24,8 @@
     <link href="{{ root_url }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="{{ root_url }}/assets/bootstrap/css/custom.css" rel="stylesheet" type="text/css">
   <link href="{{ root_url }}/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
-  
+   <link href="{{ root_url }}/stylesheets/screen.css" rel="stylesheet" type="text/css">
+
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   {% include custom/head.html %}
   {% include google_analytics.html %}
