--- a/source/_includes/sidebar.html
+++ b/source/_includes/sidebar.html
@@ -1,5 +1,5 @@
 {% unless page.sidebar == false %}
-  <div class="span{{ site.sidebar_width or 2 }} sidebar pull-right">
+  <div class="span3 sidebar pull-right">
     <div class="well">
       {% if site.page_asides.size %}
         {% include_array page_asides %}
