--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -18,6 +18,7 @@
 
   {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
+  <link rel="meta" type="application/rdf+xml" title="FOAF" href="foaf.rdf" />
   <link href="{{ root_url }}/favicon.png" rel="icon">
 
     <link href="{{ root_url }}/assets/bootstrap/css/spacelab.min.css" rel="stylesheet" type="text/css">
