--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,6 +1,6 @@
 <section>
    <div style="text-align: center;">
    <img  class="img-polaroid" src="{{ root_url }}/assets/satra.jpg"><br>
-   <a class="lead" href="https://www.dropbox.com/s/3np5k1p5g1i2iu7/CV_Latest.pdf">Download CV</a>
+   <a class="lead" href="https://dl.dropbox.com/s/3np5k1p5g1i2iu7/CV_Latest.pdf">Download CV</a>
    </div>
 </section>
